Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-17497

Prevent setting incorrect values for identity and rsi upcall

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • Lustre 2.16.0
    • 3
    • 9223372036854775807

      Identity upcall can be set via lctl set_param mdt.*.identity_upcall=xxx, and rsi upcall can be set via lctl set_param sptlrpc.gss.rsi_upcall=xxx.

      Possible values are a valid path to an executable, and also NONE to disable identity upcall. In order to prevent Lustre issues due to the upcall incorrectly set, we should check for input value, and return an error if it is not correct (along with a kind message giving accepted values).

            sebastien Sebastien Buisson
            sebastien Sebastien Buisson
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: